[tool.poetry]
name = "ooniapi"
version = "1.0.88"
description = ""
authors = ["OONI <contact@ooni.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.15"
clickhouse-driver = "^0.2.6"
filelock = "^3.13.1"
flasgger = "^0.9.7.1"
flask = "^3.0.0"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
geoip2 = "^4.8.0"
gitpython = "^3.1.40"
pyjwt = "^2.8.0"
lmdb = "^1.4.1"
lz4 = "^4.3.3"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
sqlalchemy-ext = "^0.2"
sqlalchemy-utils = "^0.41.1"
statsd = "^4.0.1"
urllib3 = "^2.0.7"
ujson = "^5.9.0"
zstd = "^1.5.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
