[tool.poetry]
name = "ooniapi"
version = "2.0.0-dev"
description = ""
authors = ["OONI <contact@ooni.org>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
clickhouse-driver = "^0.2.6"
sqlalchemy = "1.4.51"
ujson = "^5.9.0"
urllib3 = "^2.1.0"
python-dateutil = "^2.8.2"
pydantic-settings = "^2.1.0"
statsd = "^4.0.1"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"
flask = "^3.0.1"
filelock = "^3.13.1"
gitpython = "^3.1.41"
requests = "^2.31.0"
jwt = "^1.3.1"
flask-cors = "^4.0.0"
flask-restful = "^0.3.10"
pem = "^23.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
