[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastpath"
version = "0.92"
description = ""
requires-python = ">=3.12.0"
dependencies = []

[project.scripts]
fastpath = "fastpath.core:main"
reprocessor = "fastpath.reprocessor:main"
domain_input_updater = "fastpath.domain_input:main"

[tool.setuptools]
packages = ["fastpath", "fastpath.tests"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
fastpath = ["views/*.tpl", "static/*"]
