[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-clickhouse"
dynamic = ["version"]
description = 'pytest plugin for clickhouse'

dependencies = [
  "clickhouse-driver ~= 0.2.6",
  "docker ~= 6.1.3",
]

readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "OONI", email = "contact@ooni.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://docs.ooni.org"
Issues = "https://github.com/ooni/backend/issues"
Source = "https://github.com/ooni/backend"

[project.entry-points.pytest11]
pytest_clickhouse = "pytest_clickhouse.plugin"

[tool.hatch.version]
path = "pytest_clickhouse/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "click",
]
path=".venv/"

[tool.hatch.envs.default.scripts]
test = "pytesli-lt {args:tests}"
test-cov = "pytest -s --full-trace --log-level=INFO  --log-cevel=INFO -v --setup-show --cov=./ --cov-report=xml --cov-report=html --cov-report=term {args:tests}"
cov-report = ["coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:pytest_clickhouse tests}"

[tool.coverage.run]
source_pkgs = ["pytest_clickhouse", "tests"]
branch = true
parallel = true
omit = [
  "pytest_clickhouse/__about__.py",
]

[tool.coverage.paths]
pytest_clickhouse = ["pytest_clickhouse", "*/pytest-clickhouse/pytest_clickhouse"]
tests = ["tests", "*/pytest-clickhouse/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
