[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reuploader"
description = "resubmits failed measurement uploads from s3 to fastpath"
dynamic = ["version"]

dependencies = [
  "boto3==1.43.21",
  "botocore==1.43.21",
  "certifi==2026.5.20",
  "charset-normalizer==3.4.7",
  "idna==3.18",
  "jmespath==1.1.0",
  "python-dateutil==2.9.0.post0",
  "requests==2.34.2",
  "s3transfer==0.18.0",
  "six==1.17.0",
  "urllib3==2.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reuploader"]

readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
keywords = []
authors = [{ name = "OONI", email = "contact@ooni.org" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Documentation = "https://github.com/ooni/backend"
Issues = "https://github.com/ooni/backend/issues"
Source = "https://github.com/ooni/backend"

[tool.hatch.version]
path = "src/reuploader/__about__.py"

[project.scripts]
reuploader = "reuploader.main:main"

