[tool.poetry]
name = "oonidataapi"
version = "0.4.4.dev1"
description = ""
authors = ["OONI <contact@ooni.org>"]
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
clickhouse-driver = "^0.2.6"
sqlalchemy = "^2.0.27"
ujson = "^5.9.0"
urllib3 = "^2.1.0"
python-dateutil = "^2.8.2"
pydantic-settings = "^2.1.0"
statsd = "^4.0.1"
uvicorn = "^0.25.0"
psycopg2 = "^2.9.9"
httpx = "^0.26.0"
pyjwt = "^2.8.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
docker = "^7.0.0"
pytest-cov = "^4.1.0"
click = "^8.1.7"
black = "^24.2.0"
pytest-postgresql = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
